# attentio-cli

./: CHANGELOG.md  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: PLAN.md  shell_commands.md
scripts/: udev_rules_attentio.sh  udev_rules_attetio.sh
src/: error.rs  json_output.rs  lib.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: ble.rs  completions.rs  dfu.rs  led.rs  list.rs  loglevel.rs  metadata.rs  mod.rs  monitor.rs  power.rs  send.rs  session.rs  set.rs  settings.rs  shell.rs  status.rs  tui.rs  version.rs
src/device/: ble.rs  config.rs  connection.rs  discovery.rs  metadata.rs  mod.rs  settings.rs
src/monitor/: app.rs  event.rs  format.rs  mod.rs  ui.rs
src/protocol/: client.rs  crc.rs  mod.rs  packet.rs
src/tui/: app.rs  event.rs  ui.rs
