[package]
name = "attentio"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Attentio device management"
license = "MIT"

[lib]
name = "attentio"
path = "src/lib.rs"

[[bin]]
name = "attentio"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"

# Serial port enumeration
serialport = "4"

# USB device enumeration (for DFU mode detection)
rusb = "0.9"

# DFU firmware flashing
dfu-libusb = "0.5"

# Progress bar (DFU flashing)
indicatif = "0.17"

# Low-level POSIX (already a transitive dep; used for non-exclusive serial port open)
libc = "0.2"

# Serialization (for --json output)
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# Error handling
anyhow = "1"
thiserror = "2"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crc32fast = "1.5.0"
